--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-    "name": "apep",
-    "version": "1.3.1",
-    "description": "Generate random text from a grammar.",
-    "author": "Matt Bierner",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/mattbierner/apep.git"
-    },
-    "keywords": [
-        "text",
-        "dada engine",
-        "generator"],
-
-    "main": "index.js",
-   
-    "dependencies": {
-        "walker-sample": "^0.0.0"    
-    },
-    "devDependencies": {
-        "babel-preset-es2015": "^6.1.0",
-        "gulp": "^3.9.0",
-        "gulp-babel": "^6.1.0",
-        "gulp-plumber": "^1.0.0",
-        "gulp-sourcemaps": "^1.6.0",
-        "mocha": "^2.3.0"
-    },
-    
-    "scripts": {
-        "test": "mocha tests"
-    }
+  "name": "apep",
+  "version": "1.3.1",
+  "description": "Generate random text from a grammar.",
+  "author": "Matt Bierner",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mattbierner/apep.git"
+  },
+  "keywords": [
+    "text",
+    "dada engine",
+    "generator"
+  ],
+  "main": "index.js",
+  "dependencies": {
+    "@sailshq/walker-sample": "0.0.2"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.1.0",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.0",
+    "gulp-plumber": "^1.0.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "mocha": "^2.3.0"
+  },
+  "scripts": {
+    "test": "mocha tests"
+  }
 }
