--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "apep",
+  "name": "@sailshq/apep",
   "version": "1.3.1",
   "description": "Generate random text from a grammar.",
   "author": "Matt Bierner",
@@ -15,7 +15,7 @@
   ],
   "main": "index.js",
   "dependencies": {
-    "@sailshq/walker-sample": "0.0.2"
+    "@sailshq/walker-sample": "^0.0.2"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.0",
